Fixed Layout Problems for first 2 sections

--- a/haunted-site/src/styles.css
+++ b/haunted-site/src/styles.css
@@ -1,8 +1,32 @@
+.just-another-hand-regular {
+  font-family: "Just Another Hand", cursive;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.noto-serif{
+  font-family: "Noto Serif", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
 
 #root{
     margin: 0;
     padding: 0;
     height: 100%;
+    --main-color: #FFE227;
+    --secondary-color: #D9D9D9;
+}
+
+h1{
+    font-family: "Just Another Hand";
+    font-size: 70px;
+}
+
+p{
+    font-family: "Noto Serif";
 }
 
 html, body{ padding: 0; margin: 0; height: 100%;}
@@ -13,18 +37,41 @@ html, body{ padding: 0; margin: 0; height: 100%;}
     background-repeat: no-repeat;
     background-size: cover;
     height: 300%;
+    display: flex;
+    justify-content: center;
 }
 
 .logo{
-    padding: 100%;
-    text-align: center;
+    display: flex;
+    flex-direction: row;
+    margin: 5rem 0;
+    justify-content: space-evenly; 
+    width: 30rem;
+
 }
+
+.logo img{
+    width: 20rem;
+    height: auto;
+}
+
 .learn-more{
-    background-color: #FFE227;
+    background-color: var(--main-color);
     padding: 1rem 0;
     width: 100%;
     height: 70%;
     text-align: center;
+}
+
+.learn-more button{
+    background-image: url("assets/NextButtonIcon.png");
+    background-position: center;
+    background-repeat: none;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 100px;
+    background-color: #FFE227;
+    border: 4px solid black;
 }
 
 .landing-page{
@@ -34,31 +81,39 @@ html, body{ padding: 0; margin: 0; height: 100%;}
 }
 
 .description{
+    
+    height: 100%;
     display: flex;
-    background-color: #FFE227;
-    width: 95%;
-    padding: 20px;
+  
+}
+
+.info{
+    display: flex;
+    background-color: var(--main-color);
+    width: 85%;
+    height: 70%;
+    padding: 1rem;
     margin: auto;
-    gap: 50px;
+    gap: 2rem;
+}
+
+.info img{
+    width: auto;
+}
+
+.info .side-text{
     
 }
 
-.description img{
-    width: 30%;
-}
-
-.description p{
-    width: 90%
-}
-
 .section{
-    margin-bottom: 10rem;
+    
+    margin-bottom: 5rem;
 }
+
 
 .section-header{
     text-align: center;
-    background-color: bisque;
-    padding: 3rem;
+    background-color: var(--secondary-color);
 }
 
 .values{
@@ -71,16 +126,14 @@ html, body{ padding: 0; margin: 0; height: 100%;}
 
 .column{
     margin: 0 20px;
-    overflow: hidden;
-    width: 25rem;
-    height: 100%;
-    padding: 10px;
-    
+    width: 20rem;
+    height: 45rem;
 }
 
 .column img{
-    border: solid 10px yellow;
+    border: solid 10px var(--main-color);
     width: 100%;
+    height: 100%;
     object-position: center;
     object-fit: cover;
 
@@ -97,4 +150,10 @@ html, body{ padding: 0; margin: 0; height: 100%;}
 }
 .contact form{
     padding: 10px;
+}
+
+footer{
+    background-color: var(--main-color);
+    padding: 5rem;
+    margin-top: 5rem;
 }
